--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,26 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import "tailwindcss";
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@theme {
+    --color-bright-sun-50: #fefbe8;
+    --color-bright-sun-100: #fff6c2;
+    --color-bright-sun-200: #ffea89;
+    --color-bright-sun-300: #ffd234;
+    --color-bright-sun-400: #fdbf12;
+    --color-bright-sun-500: #eca606;
+    --color-bright-sun-600: #cc7e02;
+    --color-bright-sun-700: #a35805;
+    --color-bright-sun-800: #86450d;
+    --color-bright-sun-900: #723911;
+    --color-bright-sun-950: #431c05;
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    --font-spartwell: 'Spartwell', sans-serif;
+    --font-anton: 'Anton', sans-serif;
+    --font-montserrat: 'Montserrat', sans-serif;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+@layer utilities{
+    .mt-1000{
+        margin-top: 100px;
+    }
 }
